--- a/.azuredevops/.azure-pipelines.yml
+++ b/.azuredevops/.azure-pipelines.yml
@@ -1,5 +1,5 @@
 trigger:
-  - main
+- main
 
 pool:
   name: SelfHosted
@@ -19,31 +19,43 @@ stages:
   - job: FlywayMigration
     displayName: "Flyway SQL Migration"
     steps:
-
-    # 1️⃣ Checkout repo
     - checkout: self
 
-    # 2️⃣ Start SQL Server using Docker
-    - script: |
-        docker run -d \
-          --name sqlserver \
-          -e "ACCEPT_EULA=Y" \
-          -e "MSSQL_SA_PASSWORD=$(DB_PASSWORD)" \
-          -p 1433:1433 \
+    # 1) Start SQL Server container
+    - powershell: |
+        # Clean up if it already exists
+        docker rm -f sqlserver 2>$null
+
+        docker run -d --name sqlserver `
+          -e "ACCEPT_EULA=Y" `
+          -e "MSSQL_SA_PASSWORD=$(DB_PASSWORD)" `
+          -p 1433:1433 `
           mcr.microsoft.com/mssql/server:2022-latest
+
+        docker ps --filter "name=sqlserver"
       displayName: "Start SQL Server container"
 
-    # 3️⃣ Wait for SQL Server to be ready
-    - script: |
-        echo "Waiting for SQL Server to be ready..."
-        sleep 25
+    # 2) Wait for SQL Server to be ready
+    - powershell: |
+        Write-Host "Waiting for SQL Server to be ready..."
+        Start-Sleep -Seconds 25
       displayName: "Wait for SQL Server startup"
 
-    # 4️⃣ Run Flyway migrations
-    - script: |
-        docker run --rm \
-          -v $(Build.SourcesDirectory)/flyway/sql:/flyway/sql \
-          flyway/flyway:10 \
-          -url="jdbc:sqlserver://$(DB_HOST):$(DB_PORT);databaseName=$(DB_NAME);encrypt=true;trustServerCertificate=true" \
-          -user=$(DB_USER) \
-          -password=$(DB_PASSWORD) \
+    # 3) Run Flyway migrations
+    - powershell: |
+        docker run --rm `
+          -v "$(Build.SourcesDirectory)\flyway\sql:/flyway/sql" `
+          flyway/flyway:10 `
+          -url="jdbc:sqlserver://$(DB_HOST):$(DB_PORT);databaseName=$(DB_NAME);encrypt=true;trustServerCertificate=true" `
+          -user="$(DB_USER)" `
+          -password="$(DB_PASSWORD)" `
+          migrate
+      displayName: "Run Flyway migrations"
+
+    # 4) (Optional) Show result and clean up
+    - powershell: |
+        Write-Host "Containers after migration:"
+        docker ps -a
+        docker rm -f sqlserver 2>$null
+      displayName: "Cleanup SQL Server container"
+      condition: always()
