--- a/.azuredevops/.azure-pipelines.yml
+++ b/.azuredevops/.azure-pipelines.yml
@@ -1,5 +1,5 @@
 trigger:
-- main
+  - main
 
 pool:
   name: SelfHosted
@@ -18,79 +18,35 @@ stages:
   jobs:
   - job: FlywayMigration
     displayName: "Flyway SQL Migration"
-    timeoutInMinutes: 60
     steps:
+
+    # 1️⃣ Checkout repo
     - checkout: self
 
-    # 1) Start SQL Server container (idempotent)
+    # 2️⃣ Start SQL Server using Docker
     - powershell: |
-        Write-Host "== Cleanup existing container (if any) =="
-        $exists = docker ps -a --format "{{.Names}}" | Select-String -SimpleMatch "sqlserver"
-        if ($exists) {
-          docker rm -f sqlserver | Out-Null
-          Write-Host "Removed existing 'sqlserver' container."
-        } else {
-          Write-Host "No existing 'sqlserver' container found."
-        }
-
-        Write-Host "== Start SQL Server container =="
-        docker run -d --name sqlserver `
+        docker rm -f sqlserver 2>$null
+        docker run -d `
+          --name sqlserver `
           -e "ACCEPT_EULA=Y" `
           -e "MSSQL_SA_PASSWORD=$(DB_PASSWORD)" `
           -p 1433:1433 `
           mcr.microsoft.com/mssql/server:2022-latest
-
-        docker ps --filter "name=sqlserver"
       displayName: "Start SQL Server container"
 
-    # 2) Wait until SQL Server is READY (not just sleeping)
+    # 3️⃣ Wait for SQL Server
     - powershell: |
-        Write-Host "== Waiting for SQL Server readiness =="
-        $maxAttempts = 30
-        $attempt = 0
+        Write-Host "Waiting for SQL Server to be ready..."
+        Start-Sleep -Seconds 30
+      displayName: "Wait for SQL Server startup"
 
-        while ($attempt -lt $maxAttempts) {
-          $attempt++
-          $logs = docker logs sqlserver 2>$null
-
-          if ($logs -match "SQL Server is now ready for client connections") {
-            Write-Host "SQL Server is ready."
-            exit 0
-          }
-
-          Write-Host "Not ready yet... attempt $attempt/$maxAttempts"
-          Start-Sleep -Seconds 5
-        }
-
-        Write-Host "SQL Server did not become ready in time."
-        docker logs sqlserver
-        exit 1
-      displayName: "Wait for SQL Server ready"
-
-    # 3) Run Flyway migrations
+    # 4️⃣ Run Flyway (CONNECT TO MASTER)
     - powershell: |
-        Write-Host "== Running Flyway migrations =="
         docker run --rm `
-          -v "$(Build.SourcesDirectory)\flyway\sql:/flyway/sql" `
+          -v "$(Build.SourcesDirectory)/flyway/sql:/flyway/sql" `
           flyway/flyway:10 `
-          -url="jdbc:sqlserver://$(DB_HOST):$(DB_PORT);databaseName=$(DB_NAME);encrypt=true;trustServerCertificate=true" `
-          -user="$(DB_USER)" `
-          -password="$(DB_PASSWORD)" `
+          -url="jdbc:sqlserver://$(DB_HOST):$(DB_PORT);databaseName=master;encrypt=true;trustServerCertificate=true" `
+          -user=$(DB_USER) `
+          -password=$(DB_PASSWORD) `
           migrate
       displayName: "Run Flyway migrations"
-
-    # 4) Show containers + cleanup (always runs)
-    - powershell: |
-        Write-Host "== Containers (post-run) =="
-        docker ps -a
-
-        Write-Host "== Cleanup SQL Server container =="
-        $exists = docker ps -a --format "{{.Names}}" | Select-String -SimpleMatch "sqlserver"
-        if ($exists) {
-          docker rm -f sqlserver | Out-Null
-          Write-Host "Removed 'sqlserver' container."
-        } else {
-          Write-Host "No 'sqlserver' container to remove."
-        }
-      displayName: "Cleanup"
-      condition: always()
