--- a/.azuredevops/.azure-pipelines.yml
+++ b/.azuredevops/.azure-pipelines.yml
@@ -1,10 +1,10 @@
 trigger:
-  - main
+- main
 
 pool:
   name: SelfHosted
   demands:
-    - docker
+  - docker
 
 variables:
   DB_NAME: InterviewDB
@@ -19,29 +19,52 @@ stages:
   - job: FlywayMigration
     displayName: "Flyway SQL Migration"
     steps:
-
-    # 1️⃣ Checkout repo
     - checkout: self
 
-    # 2️⃣ Start SQL Server using Docker
+    # 1) Clean up any old container (ONLY if it exists)
     - powershell: |
-        docker rm -f sqlserver 2>$null
+        $exists = docker ps -a --format "{{.Names}}" | Select-String -Pattern "^sqlserver$"
+        if ($exists) {
+          Write-Host "Removing existing sqlserver container..."
+          docker rm -f sqlserver
+        } else {
+          Write-Host "No existing sqlserver container found. Skipping remove."
+        }
+      displayName: "Cleanup old SQL Server container"
+
+    # 2) Start SQL Server
+    - powershell: |
+        Write-Host "Starting SQL Server container..."
         docker run -d `
           --name sqlserver `
           -e "ACCEPT_EULA=Y" `
           -e "MSSQL_SA_PASSWORD=$(DB_PASSWORD)" `
           -p 1433:1433 `
           mcr.microsoft.com/mssql/server:2022-latest
+
+        docker ps
       displayName: "Start SQL Server container"
 
-    # 3️⃣ Wait for SQL Server
+    # 3) Wait for SQL Server to become ready (better than blind sleep)
     - powershell: |
-        Write-Host "Waiting for SQL Server to be ready..."
-        Start-Sleep -Seconds 30
-      displayName: "Wait for SQL Server startup"
+        Write-Host "Waiting for SQL Server to accept connections..."
+        $max = 60
+        for ($i=1; $i -le $max; $i++) {
+          $logs = docker logs sqlserver 2>$null
+          if ($logs -match "SQL Server is now ready for client connections") {
+            Write-Host "SQL Server is ready!"
+            exit 0
+          }
+          Start-Sleep -Seconds 2
+        }
+        Write-Host "SQL Server did not become ready in time."
+        docker logs sqlserver
+        exit 1
+      displayName: "Wait for SQL Server readiness"
 
-    # 4️⃣ Run Flyway (CONNECT TO MASTER)
+    # 4) Run Flyway migrations (BOOTSTRAP via master)
     - powershell: |
+        Write-Host "Running Flyway migrations..."
         docker run --rm `
           -v "$(Build.SourcesDirectory)/flyway/sql:/flyway/sql" `
           flyway/flyway:10 `
@@ -50,3 +73,10 @@ stages:
           -password=$(DB_PASSWORD) `
           migrate
       displayName: "Run Flyway migrations"
+
+    # 5) Optional: stop & remove container after job (keeps machine clean)
+    - powershell: |
+        Write-Host "Cleaning up SQL Server container..."
+        docker rm -f sqlserver
+      displayName: "Cleanup SQL Server container"
+      condition: always()
